@@ -98,7 +98,7 @@ KModuleList;
 
 static KModuleList *KModules = NULL;
 
-void 
+void
 KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 {
 
@@ -121,7 +121,7 @@ KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 
 }
 
-void 
+void
 KDE_ClientTextMessage(Window win, Atom atom, char *data)
 {
 
@@ -143,7 +143,7 @@ KDE_ClientTextMessage(Window win, Atom atom, char *data)
 
 }
 
-void 
+void
 KDE_SendMessagesToModules(Atom atom, long data)
 {
 
@@ -162,7 +162,7 @@ KDE_SendMessagesToModules(Atom atom, long data)
 
 }
 
-void 
+void
 KDE_UpdateFocusedWindow(void)
 {
 
@@ -211,7 +211,7 @@ KDE_UpdateFocusedWindow(void)
 
 }
 
-void 
+void
 KDE_NewWindow(EWin * ewin)
 {
 
@@ -266,7 +266,7 @@ KDE_NewWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_RemoveWindow(EWin * ewin)
 {
 
@@ -296,7 +296,7 @@ KDE_RemoveWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_AddModule(Window win)
 {
 
@@ -431,7 +431,7 @@ KDE_AddModule(Window win)
 
 }
 
-void 
+void
 KDE_RemoveModule(Window win)
 {
 
@@ -486,7 +486,7 @@ KDE_RemoveModule(Window win)
 
 }
 
-void 
+void
 KDE_Init(void)
 {
    /*
@@ -607,7 +607,7 @@ KDE_Init(void)
 
 }
 
-void 
+void
 KDE_Shutdown(void)
 {
 
@@ -681,7 +681,7 @@ KDE_Shutdown(void)
 
 }
 
-void 
+void
 KDE_ClientInit(Window win)
 {
 
@@ -714,7 +714,7 @@ KDE_ClientInit(Window win)
 
 }
 
-void 
+void
 KDE_ClientChange(Window win, Atom a)
 {
 
@@ -807,7 +807,7 @@ KDE_ClientChange(Window win, Atom a)
 
 }
 
-void 
+void
 KDE_GetDecorationHint(Window win, long *dechints)
 {
 
@@ -877,7 +877,7 @@ KDE_GetDecorationHint(Window win, long *dechints)
 
 }
 
-void 
+void
 KDE_CheckClientHints(Window win)
 {
 
@@ -900,7 +900,7 @@ KDE_CheckClientHints(Window win)
 
 }
 
-int 
+int
 KDE_WindowCommand(EWin * ewin, char *cmd)
 {
 
@@ -956,7 +956,7 @@ KDE_WindowCommand(EWin * ewin, char *cmd)
 
 }
 
-void 
+void
 KDE_Command(char *cmd, XClientMessageEvent * event)
 {
 
@@ -1035,7 +1035,7 @@ KDE_Command(char *cmd, XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ProcessClientMessage(XClientMessageEvent * event)
 {
 
@@ -1099,7 +1099,7 @@ KDE_ProcessClientMessage(XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ModuleAssert(Window win)
 {
 
@@ -1113,7 +1113,7 @@ KDE_ModuleAssert(Window win)
 
 }
 
-void 
+void
 KDE_PrepModuleEvent(Window win, KMessage msg)
 {
 
@@ -1162,7 +1162,7 @@ KDE_PrepModuleEvent(Window win, KMessage msg)
 
 }
 
-void 
+void
 KDE_SetRootArea(void)
 {
 
@@ -1181,7 +1181,7 @@ KDE_SetRootArea(void)
 
 }
 
-void 
+void
 KDE_SetNumDesktops(void)
 {
 
@@ -1217,7 +1217,7 @@ KDE_SetNumDesktops(void)
    EDBUG_RETURN_;
 }
 
-void 
+void
 KDE_HintChange(Atom a)
 {
 
@@ -1286,7 +1286,7 @@ KDE_HintChange(Atom a)
 
 }
 
-void 
+void
 KDE_UpdateClient(EWin * ewin)
 {
 
